<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_500"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Theme.MyCode.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_medium"
                android:text="Earthquake"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_custom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.gempa.EarthquakeFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/gempa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/gempa_terkini"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20sp" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/img_earthquake"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/earthquake"
                        app:lottie_speed="1" />

                    <TextView
                        android:id="@+id/dirasakan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/gempa"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_toEndOf="@+id/img_earthquake"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/dirasakan"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/wilayah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_dirasakan"
                        android:layout_alignStart="@+id/dirasakan"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/wilayah"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/magnitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_wilayah"
                        android:layout_alignStart="@+id/wilayah"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/magnitude"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/kedalaman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/magnitude"
                        android:layout_alignStart="@+id/magnitude"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/kedalaman"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_dirasakan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/dirasakan"
                        android:layout_alignStart="@+id/dirasakan"
                        android:textColor="@android:color/darker_gray"
                        tools:text="II Kota Jayapura" />

                    <TextView
                        android:id="@+id/tv_wilayah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/wilayah"
                        android:layout_alignStart="@+id/wilayah"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="3dp"
                        android:textColor="@android:color/darker_gray"
                        tools:text="Pusat gempa berada di darat 4 km barat laut Kota Jayapura" />

                    <TextView
                        android:id="@+id/tv_magnitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/magnitude"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/magnitude"
                        android:textColor="@android:color/darker_gray"
                        tools:text="2.7" />

                    <TextView
                        android:id="@+id/tv_kedalaman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/tv_magnitude"
                        android:layout_alignTop="@+id/kedalaman"
                        android:textColor="@android:color/darker_gray"
                        tools:text="3 km" />

                    <ImageView
                        android:id="@+id/clock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/kedalaman"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/image_clock"
                        app:srcCompat="@drawable/clock" />

                    <TextView
                        android:id="@+id/tv_clock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/clock"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_toEndOf="@+id/clock"
                        android:textColor="@android:color/darker_gray"
                        tools:text="10:12:47 WIB" />

                    <ImageView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/clock"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="4dp"
                        android:layout_toEndOf="@+id/tv_clock"
                        android:contentDescription="@string/image_date"
                        app:srcCompat="@drawable/date" />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/date"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="2dp"
                        android:layout_toEndOf="@+id/date"
                        android:textColor="@android:color/darker_gray"
                        tools:text="20 Feb 2023" />


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/daftar_gempa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/daftar_gempabumi_m_5_0"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/daftar_gempa" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_daftar_gempa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:listitem="@layout/item_newearthquake" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>